tests/errors/cnt_to_leds_and_rfm.tc
configuration cnt_to_leds_and_rfm {
  uses main, counter, int_to_leds, int_to_rfm, clock;

  main -> counter;
  counter -> clock;
  int_to_leds <- counter.output;
  counter.output -> int_to_rfm;
}
